[package]
name = "qubit-execution-services"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-execution-services"
description = "Aggregated execution services facade for blocking, CPU-bound, Tokio blocking, and async IO tasks"
homepage = "https://github.com/qubit-ltd/rs-execution-services"
documentation = "https://docs.rs/qubit-execution-services"
readme = "README.md"
keywords = ["executor", "service", "tokio", "rayon", "thread-pool"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_execution_services"
doctest = true

[dependencies]
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt"] }

qubit-function = "0.13"
qubit-executor = "0.3"
qubit-rayon-executor = "0.2"
qubit-tokio-executor = "0.2"
qubit-thread-pool = "0.3"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
