[package]
name = "qubit-execution-services"
version = "0.6.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-execution-services"
description = "Aggregated execution services facade for blocking, CPU-bound, Tokio blocking, and async IO tasks"
homepage = "https://github.com/qubit-ltd/rs-execution-services"
documentation = "https://docs.rs/qubit-execution-services"
readme = "README.md"
keywords = ["executor", "service", "tokio", "rayon", "thread-pool"]
categories = ["concurrency", "asynchronous"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_execution_services"
doctest = true

[dependencies]
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt", "time"] }

qubit-function = "0.14"
qubit-executor = "0.6"
qubit-rayon-executor = "0.5"
qubit-tokio-executor = "0.7"
qubit-thread-pool = "0.8"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
